--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "Backend for CivicSpot platform",
   "main": "backend/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
-    "build": "cd frontend && npm run build",
-    "install-all": "cd backend && npm install && cd ../frontend && npm install",
-    "setup-db": "cd backend && node scripts/setup-admin-system.js",
-    "show-admins": "cd backend && node scripts/show-admin-info.js",
-    "test-routes": "node test-routes.js"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,12 +19,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0",
     "nodemon": "^3.0.1"
   },
-  "keywords": ["civic", "reporting", "cleanup", "community", "smart-city"],
-  "author": "CivicSpot Team",
-  "license": "MIT",
   "engines": {
     "node": ">=16.0.0"
   }
