--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "civicspot",
   "version": "1.0.0",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
-    "install": "cd frontend && npm install"
+    "build": "cd frontend && npm install && npm run build"
   }
 }
