--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "civicspot-monorepo",
   "version": "1.0.0",
   "scripts": {
-    "build": "cd frontend && npm ci && npm run build"
+    "build": "cd frontend && npm install && vite build"
   }
 }
